update synthetic photometry
use Bessell & Murphy 2012 and astropy units

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 .ipynb_checkpoints/Untitled-Copy1-checkpoint.ipynb
 
 .ipynb_checkpoints/Untitled-Copy2-checkpoint.ipynb
+
+utils/BessellMurphy2012/.ipynb_checkpoints/Development-checkpoint.ipynb
